--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@fontsource/poppins": "^5.2.7",
     "@google/genai": "^1.38.0",
     "@google/generative-ai": "^0.24.1",
+    "@nuxt/image": "^2.0.0",
+    "@nuxt/ui": "^4.4.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@vueuse/core": "^14.2.0",
+    "material-symbols": "^0.40.2",
     "nuxt": "^4.2.2",
     "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   }
